--- a/project1/assignment-Art/index.html
+++ b/project1/assignment-Art/index.html
@@ -17,7 +17,7 @@
          <ul>
 	           <li> <a href="#">Home</a> </li>
 	           <li><a href="#">Gallery</a></li>
-	           <li><a href="#">Now On Sale</a></li>
+	           <li><a href="../assignment2/index.html">Portfolio</a></li>
 	           <li><a href="#">The Artists</a></li>
 	           <li><a href="#">Contacts</a></li>
           </ul>
@@ -27,36 +27,37 @@
           <img src="img/Screenshot.jpg">
            <h1>  Art Gallery  </h1> </div>
          <img src="img/hero.jpg" class="alpha omega"/>
-             <section class="grid_4 alpha">
+
+          <section class="grid_4 alpha">
                  <a href="">  <img src="img/ArtGallery1jpg.jpg"></a>
                 </section>
 
-            <section class=" grid_4">
+          <section class=" grid_4">
               <div class="middle">
                 <p> The Art Gallery is proud to present fine modern and contemporary art in one of the most beautiful art museums in India. We aim to be a place of experience and inspiration, through our collection, exhibitions, programs and research.
                 The works are displayed in expansive, light-filled spaces, offering stunning and intricate views. </p>
 
                     <a href="" style="font-size:18px; text-decoration:underline;">read more..</a>
                     </div>
-              </section>
+          </section>
 
-             <section class="grid_4 omega">
+          <section class="grid_4 omega">
                <a href=""><img src="img/ArtGallery2.jpg"></a>
-             </section>
+          </section>
 
-             <section class="breaker  alpha">
+          <section class="breaker  alpha">
                    <h2 class=""> Presenting an art that lives and breathes its role ....</h2>
-              </section>
+          </section>
 
-            <section class="grid_8 alpha">
+          <section class="grid_8 alpha">
               <a href="">  <img src="img/horse.jpg"></a>
-            </section>
+          </section>
 
-            <section class="grid_4 omega">
+          <section class="grid_4 omega">
               <p> aafrgtrhy </p>
-            </section>
+          </section>
 
-             <section class="grid_4 omega">
+           <section class="grid_4 omega">
                 <div class="middle1">
                   <p> The collections we present are enormously rich and varied. They are a fascinating barometer of the evolution of taste and style, and of changing social, cultural and even political values.  </p>
 
@@ -68,8 +69,7 @@
                     </ul>
 
                   </div>
-              </section>
-
+            </section>
 
 
            </div>
@@ -93,7 +93,7 @@
                <h6> Gallery (c) 2015 | Privacy policy      </h6>
                </div>
 
-            </footer>
+          </footer>
 
 
 
