--- a/project1/services.html
+++ b/project1/services.html
@@ -17,7 +17,7 @@
          <ul>
 	           <li> <a href="#">Home</a> </li>
 	           <li><a href="#">Gallery</a></li>
-	           <li><a href="../assignment2/index.html">Portfolio</a></li>
+	           <li><a href="portfolio.html">Portfolio</a></li>
 	           <li><a href="#">The Artists</a></li>
 	           <li><a href="#">Contacts</a></li>
           </ul>
