--- a/project1/portfolio.html
+++ b/project1/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>portfolio</title>
 <link rel="stylesheet" href="css/960_12_col.css">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/text.css">
@@ -31,35 +31,35 @@
     <div class="main container_12">
       <section class="grid_6 alpha" >
         <a href=""><img src="img/images2.jpg"></a>
-        <h6 class="h6">  3D art  turns something ordinary into an extraordinary piece, thanks to the creative minds and talents of artists. </h6>
+        <h6 class="head">  3D art  turns something ordinary into an extraordinary piece, thanks to the creative minds and talents of artists. </h6>
       </section>
 
       <section class="grid_6 omega">
-        <img src="img/images3.jpg" style="position:relative;left:70px;">
-        <h6 class="h6"> This world is but a canvas to our imagination and the art is a feast to the eyes!!!</H6>
+        <img src="img/images3.jpg" class="secimg">
+        <h6 class="head"> This world is but a canvas to our imagination and the art is a feast to the eyes!!!</H6>
       </section>
 
       <section class="grid_6 alpha"><br>
         <img src="img/img4.jpg" />
-       <h6 class="h6"> Watch your step! Walking on thin ice has never been safer. </H6>
+       <h6 class="head"> Watch your step! Walking on thin ice has never been safer. </H6>
       </section>
             <br>
       <section class="grid_6 omega ">
             <br>
-        <img src="img/images1.jpg" style="position:relative;left:70px;" />
-        <h6 style="margin-top:20px; font-family: 'Open Sans';	color:black; font-size:18px;"> Vision is the art of seeing what is invisible to others!!! </H6>
+        <img src="img/images1.jpg" class="secimg" />
+        <h6 class="sech6"> Vision is the art of seeing what is invisible to others!!! </H6>
       </section>
          <br><br>
 
       <section class="grid_6 alpha">
           <br><img src="img/buddha.jpg"  />
-              <h6 style="margin-top:30px;font-family: 'Open Sans';	color:black; font-size:18px;"> Dream for an art of balance, purity and serenity. The aim of an art is to represent not just the outward appearance but the inner significance....</H6>
+              <h6 class="sech6"> Dream for an art of balance, purity and serenity. The aim of an art is to represent not just the outward appearance but the inner significance....</H6>
       </section>
           <br>
 
       <section class="grid_6 omega"><br>
-             <img src="img/paper.jpg" style="position:relative;left:70px;"/>
-              <h6 style="margin-top:30px; font-family: 'Open Sans';	color:black; font-size:18px"> A simple piece of paper gets turned into a creative piece of 3D art with some scissors, whole lot of time, patience and uncompromised precision....</H6>
+             <img src="img/paper.jpg" class="secimg"/>
+              <h6 class="sech6"> A simple piece of paper gets turned into a creative piece of 3D art with some scissors, whole lot of time, patience and uncompromised precision....</H6>
       </section>
 
     </div>
