--- a/project1/services.html
+++ b/project1/services.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>services</title>
 <link rel="stylesheet" href="css/960_12_col.css">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/text.css">
