--- a/project1/services.html
+++ b/project1/services.html
@@ -12,7 +12,6 @@
 </head>
 <body >
 
-   <div class="wrap container_12">
       <nav class="bar">
          <ul>
 	           <li> <a href="#">Home</a> </li>
@@ -23,14 +22,15 @@
           </ul>
        </nav>
 
+  <div class="wrap container_12">
        <div class="header alpha omega">
           <img src="img/Screenshot.jpg">
            <h1>  Art Gallery  </h1> </div>
-         <img src="img/hero.jpg" class="alpha omega"/>
+          <img src="img/hero.jpg" class="alpha omega"/>
 
           <section class="grid_4 alpha">
                  <a href="">  <img src="img/ArtGallery1jpg.jpg"></a>
-                </section>
+          </section>
 
           <section class=" grid_4">
               <div class="middle">
@@ -46,15 +46,15 @@
           </section>
 
           <section class="breaker  alpha">
-                   <h2 class=""> Presenting an art that lives and breathes its role ....</h2>
+                   <h2 > Presenting an art that lives and breathes its role ....</h2>
           </section>
 
           <section class="grid_8 alpha">
-              <a href="">  <img src="img/horse.jpg"></a>
+              <a href="#">  <img src="img/horse.jpg"></a>
           </section>
 
           <section class="grid_4 omega">
-              <p> aafrgtrhy </p>
+              <p> Fascinating collections</p>
           </section>
 
            <section class="grid_4 omega">
@@ -72,7 +72,7 @@
             </section>
 
 
-           </div>
+   </div>
 
 
           <footer class="container_12">
