--- a/project1/portfolio.html
+++ b/project1/portfolio.html
@@ -11,54 +11,56 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic' rel='stylesheet' type='text/css'>
 </head>
 <body >
-  <div class="wrap container_12">
-    <nav class="bar">
+
+  <nav class="bar">
       <ul >
-           <li> <a href="#">Home</a> </li>
+           <li> <a href="services.html">Home</a> </li>
            <li><a href="#">Gallery</a></li>
            <li><a href="#">News</a></li>
            <li><a href="#">Features</a> </li>
            <li> <a href="#">Our Community</a></li>
           <li><a href="#">Shop</a> </li>
        </ul>
-    </nav>
+  </nav>
+
+  <div class="wrap container_12">
 
     <div class="header alpha omega">
       <h1>  Art Gallery Renditions..   </h1> </div>
-      <a href=""><img src="img/img3.jpg" class="alpha omega"/></a>
+      <a href=""><img src="img/img3.jpg" class="alpha omega" alt="img"/></a>
     </div>
 
     <div class="main container_12">
       <section class="grid_6 alpha" >
-        <a href=""><img src="img/images2.jpg"></a>
+        <a href=""><img src="img/images2.jpg" alt="img"></a>
         <h6 class="head">  3D art  turns something ordinary into an extraordinary piece, thanks to the creative minds and talents of artists. </h6>
       </section>
 
       <section class="grid_6 omega">
-        <img src="img/images3.jpg" class="secimg">
-        <h6 class="head"> This world is but a canvas to our imagination and the art is a feast to the eyes!!!</H6>
+        <img src="img/images3.jpg" class="secimg" alt="img">
+        <h6 class="head"> This world is but a canvas to our imagination and the art is a feast to the eyes!!!</h6>
       </section>
 
       <section class="grid_6 alpha"><br>
-        <img src="img/img4.jpg" />
-       <h6 class="head"> Watch your step! Walking on thin ice has never been safer. </H6>
+        <img src="img/img4.jpg" alt="img" />
+       <h6 class="head"> Watch your step! Walking on thin ice has never been safer. </h6>
       </section>
             <br>
       <section class="grid_6 omega ">
             <br>
-        <img src="img/images1.jpg" class="secimg" />
-        <h6 class="sech6"> Vision is the art of seeing what is invisible to others!!! </H6>
+        <img src="img/images1.jpg" class="secimg" alt="img"/>
+        <h6 class="sech6"> Vision is the art of seeing what is invisible to others!!! </h6>
       </section>
          <br><br>
 
       <section class="grid_6 alpha">
-          <br><img src="img/buddha.jpg"  />
+          <br><img src="img/buddha.jpg" alt="img" />
               <h6 class="sech6"> Dream for an art of balance, purity and serenity. The aim of an art is to represent not just the outward appearance but the inner significance....</H6>
       </section>
           <br>
 
       <section class="grid_6 omega"><br>
-             <img src="img/paper.jpg" class="secimg"/>
+             <img src="img/paper.jpg" class="secimg" alt="img"/>
               <h6 class="sech6"> A simple piece of paper gets turned into a creative piece of 3D art with some scissors, whole lot of time, patience and uncompromised precision....</H6>
       </section>
 
@@ -87,7 +89,7 @@
               <a href = "#"><img src="img/g+.jpg"></a>
             </section>
 
-            </div>
+        </div>
 
         <div class="foot1">
               <h6> Gallery (c) 2015 | Privacy policy      </h6>
