--- a/project-bootstrap/services.html
+++ b/project-bootstrap/services.html
@@ -22,212 +22,212 @@
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <img id="logo" src="images1/logo.jpg" />
+
       <div class="container" id="main">
-         <div id="header"> <pre> <span class="glyphicon glyphicon-user"></span>  <a href="">Register</a> : : <a href="">Login</a></pre>
-         </div>
-          <div class="navbar ">
-         	    <div class="container">
-                <button class="navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button"> <!-- navbar toggle is main for the button to appear and disappear -->
-                      <span class="icon-bar"></span> <!-- a line appears -->
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-               </button>
-                  <a href="#" class="navbar-brand"> Art Gallery  </a>
-                  <div class="nav-collapse collapse navbar-responsive-collapse ">
-  										<ul class="nav navbar-nav">
-  												<li class="active">
-  													 <a href="">Home </a>
-  												 </li>
+            
+            <div class="navbar ">
+                <div class="container-fluid">
+                    <button class="navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                   </button>
+                   <a href="#" class="navbar-brand"> Art Gallery  </a>
+                   <div class="nav-collapse collapse navbar-responsive-collapse ">
+    									<ul class="nav navbar-nav">
+    											<li class="active">
+    												 <a href="">Home </a>
+    											 </li>
 
-  												<li class="dropdown">
-  													 <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Services <strong class="caret"></strong> </a>
-  													 <ul class="dropdown-menu">
-  																<li><a href="#">Web Design </a></li>
-  																<li><a href="#">Web Development </a></li>
-  																<li><a href="#">SEO </a></li>
-  																<li class="divider"></li>
-  																<li class="dropdown-header">More Services </li>
-  																<li><a href="#">Content Creation </a></li>
-  																<li><a href="#">Social media </a></li>
-  													 </ul>
-  												</li>
+    											<li class="dropdown">
+    												 <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Services <strong class="caret"></strong> </a>
+    												 <ul class="dropdown-menu">
+    															<li><a href="#">Web Design </a></li>
+    															<li><a href="#">Web Development </a></li>
+    															<li><a href="#">SEO </a></li>
+    															<li class="divider"></li>
+    															<li class="dropdown-header">More Services </li>
+    															<li><a href="#">Content Creation </a></li>
+    															<li><a href="#">Social media </a></li>
+    												 </ul>
+    											</li>
 
-                          <li class="dropdown">
-  													 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <strong class="caret"></strong> </a>
-  													 <ul class="dropdown-menu">
-  																<li><a href="#">Web Design </a></li>
-  																<li><a href="#">Web Development </a></li>
-  																<li><a href="#">SEO </a></li>
-  																<li class="divider"></li>
-  																<li class="dropdown-header">More Services </li>
-  																<li><a href="#">Content Creation </a></li>
-  																<li><a href="#">Social media </a></li>
-  													 </ul>
-  												</li>
 
-                          <li>
-  													 <a href=""> The Artists </a>
-  												 </li>
 
                            <li>
-   													 <a href="portfolio.html"> Portfolio </a>
-   												 </li>
-  										</ul>
-                      <form class="navbar-form pull-right">
-  												<input type="text" class="form-control" placeholder="Search this site..."  id="searchInput">
-  												<button type="submit" class="btn btn-default" ><span class="glyphicon glyphicon-search"></span></button>
-  										</form>
-                  </div><!--end for nav collapse -->
-              </div> <!--end for nav container -->
+    													 <a href="portfolio.html"> Portfolio </a>
+    												</li>
 
-          </div> <!--end for nav -->
+                         </ul>
+                         <!-- <form class="navbar-form pull-left">
+                             <input type="text" class="form-control" placeholder="Search this site..."  id="searchInput">
+                             <button type="submit" class="btn btn-default" id="searchInputspan"><span class="glyphicon glyphicon-search"></span></button>
+                         </form> -->
 
-          <div class="carousel slide" id="myCarousel" data-ride="carousel">
+                         <div class=" pull-right">
+                              <pre> <span class="glyphicon glyphicon-user"></span>  <a href="">Register</a> : : <a href="">Login</a></pre>
+                         </div>
 
-              <ol class="carousel-indicators">
-                  <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
-                  <li data-slide-to="1" data-target="#myCarousel"></li>
-                  <li data-slide-to="2" data-target="#myCarousel"></li>
-              </ol>
-              <div class="carousel-inner" >
-                  <div class="item active" id="slide1">
-                     <div class="carousel-caption">
-                       <h4> Bootstrap 3 </h4>
-                       <p> Learn how to build your first responsive page </p>
-                    </div>
-                 </div>
 
-                 <div class="item" id="slide2">
-                    <div class="carousel-caption">
-                      <h4> Learn to code a website in 4 hours </h4>
-                      <p> Learn how to build your first responsive page </p>
-                   </div>
-                </div>
+                      </div><!--end for nav collapse -->
+                  </div> <!--end for nav container -->
 
-                <div class="item" id="slide3">
-                   <div class="carousel-caption">
-                     <h4> Web Hosting </h4>
-                     <p> Learn how to buy a domain name </p>
+              </div> <!--end for nav -->
+
+
+
+              <div class="carousel slide" id="myCarousel" data-ride="carousel">
+
+                  <ol class="carousel-indicators">
+                      <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
+                      <li data-slide-to="1" data-target="#myCarousel"></li>
+                      <li data-slide-to="2" data-target="#myCarousel"></li>
+                  </ol>
+                  <div class="carousel-inner" >
+                      <div class="item active" id="slide1">
+                         <img src="images1/snow.jpg" class="img-responsive"/>
+                        <div class="carousel-caption">
+                           <h4> Bootstrap 3 </h4>
+                           <p> Learn how to build your first responsive page </p>
+                        </div><!--end for carousel-caption -->
+                    </div><!--end for item-->
+
+                  <div class="item" id="slide2">
+                      <img src="images1/landscape.jpg" class="img-responsive"/>
+                      <div class="carousel-caption">
+                          <h4> Learn to code a website in 4 hours </h4>
+                          <p> Learn how to build your first responsive page </p>
+                       </div>
                   </div>
-               </div>
+
+                  <div class="item" id="slide3">
+                      <img src="images1/img3.jpg" class="img-responsive"/>
+                      <div class="carousel-caption">
+                          <h4> Web Hosting </h4>
+                          <p> Learn how to buy a domain name </p>
+                      </div>
+                  </div>
 
              </div>
-             <!-- carousel inner -->
+                 <!-- carousel inner -->
              <a class="left carousel-control" data-slide="prev" href="#myCarousel">
                   <span class="icon-prev"></span>
-            </a>
-            <a class="right carousel-control" data-slide="next" href="#myCarousel">
-                 <span class="icon-next"></span>
-           </a>
+             </a>
+             <a class="right carousel-control" data-slide="next" href="#myCarousel">
+                     <span class="icon-next"></span>
+             </a>
 
          </div>  <!-- carousel-->
 
-          <div class="jumbotron">
+         <div class="jumbotron">
               <h1>Bringing Art Galore to your doorsteps !!!</h1>
               <hr>
               <p>The Art Gallery  is proud to present fine modern and contemporary art in one of the most beautiful art museums in India. You can also view the profiles of the artists in this Art Gallery community and you are free to buy art directly from the artist or the artist's agent here....</p>
 
               <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-          </div>
+         </div>
 
-          <div class="row" id="featuresHeading">
-  					<div class="col-12">
-  						<h2>Presenting some of the exotic intricate Arts of all time... </h2>
-  						<p class="lead">The collection spans the history of the medium from the 1840s to the present day, and now includes more than 40,000 works.</p>
-  					</div><!-- end col-12 -->
-  				</div><!-- end featuresHeading -->
+         <div class="row" id="featuresHeading">
+      				<div class="col-12">
+      						<h2>Presenting some of the exotic intricate Arts of all time... </h2>
+      						<p class="lead">The collection spans the history of the medium from the 1840s to the present day, and now includes more than 40,000 works.</p>
+      				</div><!-- end col-12 -->
+      	</div><!-- end featuresHeading -->
 
-          <div class="row" id="features">
-  					<div class="col-sm-6 feature">
-  						<div class="panel">
-  							<div class="panel-heading">
-  								<h3 class="panel-title">Canvas Painting</h3>
-  							</div><!-- end panel-heading -->
-  							<img src="images1/5001.jpg" alt="HTML5" class="img-rounded">
-
-  							<p>90's authentic single-origin coffee stumptown Pinterest. Fap aesthetic dreamc..</p>
-
-  							<a href="https://www.udemy.com/build-beautiful-html5-website/" target="_blank" class="btn btn-warning btn-block"> Buy and Own!!</a>
-  						</div><!-- end panel -->
-  					</div><!-- end feature -->
+        <div class="row" id="features">
+      				<div class="col-sm-6 feature">
+      						 <div class="panel">
+      							    <div class="panel-heading">
+      								  <h3 class="panel-title">Canvas Painting</h3>
+      							</div><!-- end panel-heading -->
+      							<img src="images1/5001.jpg" alt="HTML5" class="img-rounded">
+      							<p>90's authentic single-origin coffee stumptown Pinterest. Fap aesthetic dreamc..</p>
+      							<a href="https://www.udemy.com/build-beautiful-html5-website/" target="_blank" class="btn btn-warning btn-block"> Buy and Own!!</a>
+      						</div><!-- end panel -->
+      				</div><!-- end feature -->
 
 
               <div class="col-sm-6 feature">
-                <div class="panel">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">Oil Painting</h3>
-                  </div><!-- end panel-heading -->
-                  <img src="images1/tree3.jpg" alt="HTML5" class="img-rounded">
-
-                  <p>90's authentic single-origin coffee stumptown Pinterest. Fap aesthetic dgfdgdgfdgdf.</p>
-
-                  <a href="https://www.udemy.com/build-beautiful-html5-website/" target="_blank" class="btn btn-warning btn-block"> Buy and Own!!</a>
-                </div><!-- end panel -->
+                   <div class="panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Oil Painting</h3>
+                        </div><!-- end panel-heading -->
+                        <img src="images1/tree3.jpg" alt="HTML5" class="img-rounded">
+                        <p>90's authentic single-origin coffee stumptown Pinterest. Fap aesthetic dgfdgdgfdgdf.</p>
+                        <a href="https://www.udemy.com/build-beautiful-html5-website/" target="_blank" class="btn btn-warning btn-block"> Buy and Own!!</a>
+                   </div><!-- end panel -->
               </div><!-- end feature -->
-            </div> <!-- end row -->
 
-            <div class="well">
-              <div class="page-header">
-                <h1> Presenting an art that lives and breathes its role </h1>
-              </div>
+          </div> <!-- end row -->
 
-                <a href="#"><img src="images1/horse.jpg"></a>
+          <div class="row ">
+            <div class="col-sm-12">
+              <div class="sub-content">
 
-                <p>   The Art Gallery  is proud to present fine modern and contemporary art in one of the most beautiful art museums in India. The works are displayed in expansive, light-filled spaces, offering stunning and intricate views.
-                  The collections we present are enormously rich and varied. They are a fascinating barometer of the evolution of taste and style, and of changing social, cultural and even political values.
-                   <br>
-                   <ul>
-                   <li><a href="" >Painting...</a></li>
-                   <li><a href="">Photography...</a></li>
-                   <li><a href="">Print Making...</a></li>
-                   <li><a href="">Sculpture...</a></li>
-                   </ul> </p>
+                      <div class="page-header">
+                          <h1> Presenting an art that lives and breathes its role </h1>
+                      </div>
+                      <div class="row">
+                      <div class="col-sm-6" >
+                      <a href="#" ><img src="images1/horse.jpg" ></a>
+                     </div>
+                     <div class="col-sm-6">
+                        <p>   The Art Gallery  is proud to present fine modern and contemporary art in one of the most beautiful art museums in India. The works are displayed in expansive, light-filled spaces, offering stunning and intricate views.
+                          The collections we present are enormously rich and varied. They are a fascinating barometer of the evolution of taste and style, and of changing social, cultural and even political values.
+                        <br>
+                            <ul>
+                               <li><a href="" >Painting...</a></li>
+                               <li><a href="">Photography...</a></li>
+                               <li><a href="">Print Making...</a></li>
+                               <li><a href="">Sculpture...</a></li>
+                           </ul>
+                      </p>
+                    </div>
+                  </div> <!-- inner row end-->
+                </div>
+              </div> <!-- col-sm-12 end-->
+        </div><!--end for row -->
 
+  </div> <!--end for main container -->
 
-            </div> <!--end for well -->
+  <footer>
+      <div class="row">
 
-              </div> <!--end for main container -->
+    			<div class="col-sm-2">
+            	<h6>Copyright &copy; 2015 </h6>
+          </div><!-- end col-sm-2 -->
+    			<div class="col-sm-4">
+      				<h6>About Us</h6>
+      				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    			</div><!-- end col-sm-4 -->
 
-              <footer>
-              		<div class="row">
-
-              			<div class="col-sm-2">
-              			<h6>Copyright &copy; 2015 </h6>
-              			</div><!-- end col-sm-2 -->
-
-              			<div class="col-sm-4">
-              				<h6>About Us</h6>
-              				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              			</div><!-- end col-sm-4 -->
-
-              			<div class="col-sm-2">
-              				<h6>Navigation</h6>
-              				<ul class="unstyled">
+    			<div class="col-sm-2">
+        				<h6>Navigation</h6>
+            				<ul class="unstyled">
               					<li><a href="#">Home</a></li>
               					<li><a href="#">Services</a></li>
               					<li><a href="#">Links</a></li>
               					<li><a href="#">Contact</a></li>
-              				</ul>
-              			</div><!-- end col-sm-2 -->
+              			</ul>
+        	</div><!-- end col-sm-2 -->
 
-              			<div class="col-sm-2">
-              				<h6>Follow Us</h6>
-              				<ul class="unstyled">
+          <div class="col-sm-2">
+            		<h6>Follow Us</h6>
+              			<ul class="unstyled">
               					<li><a href="#">Twitter</a></li>
               					<li><a href="#">Facebook</a></li>
               					<li><a href="#">Google Plus</a></li>
-              				</ul>
-              			</div><!-- end col-sm-2 -->
+              			</ul>
+          </div><!-- end col-sm-2 -->
 
-              			<div class="col-sm-2">
-                      <h6> For future news and information <h6>
+    			<div class="col-sm-2">
+                <h6> For future news and information <h6>
                         <input type="text" class="form-control" placeholder="ENTER EMAIL ADDRESS"  id="searchInputfoot"> <br> <button class="btn btn-success" > SEND </button>
-              			</div><!-- end col-sm-2 -->
+          </div><!-- end col-sm-2 -->
 
-              		</div><!-- end row -->
+      </div><!-- end row -->
 
-              </footer>
+  </footer>
 
 
 
